<resources>
    <string name="app_name">TMSHARA CAS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Профиль</string>
    <string name="menu_balance">Баланс</string>
    <string name="menu_buy_packets">Купить пакеты</string>
    <string name="menu_my_packets">Мои пакеты</string>
    <string name="menu_clients">Клиенты</string>
    <string name="menu_view_settings">Настройки просмотра</string>
    <string name="menu_messages">Сообщения</string>
    <string name="menu_news">Новости</string>
    <string name="menu_refs">Рефералы</string>
    <string name="menu_exit">Выйти</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
