<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_balance"
            android:title="@string/menu_balance" />
        <item
            android:id="@+id/nav_buy_packets"
            android:title="@string/menu_buy_packets" />
        <item
            android:id="@+id/nav_my_packets"
            android:title="@string/menu_my_packets" />
        <item
            android:id="@+id/nav_clients"
            android:title="@string/menu_clients" />
        <item
            android:id="@+id/nav_view_settings"
            android:title="@string/menu_view_settings" />
        <item
            android:id="@+id/nav_messages"
            android:title="@string/menu_messages" />
        <item
            android:id="@+id/nav_news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_refs"
            android:title="@string/menu_refs" />
    </group>

</menu>
